--- a/E-comerceMVC/Views/Home/Index.cshtml
+++ b/E-comerceMVC/Views/Home/Index.cshtml
@@ -7,28 +7,21 @@
 
 
 
-<!-- Categories Start -->
-@foreach (var item in Model.catgorie)
-{
+<div class="row px-xl-5 pb-3">
+    @foreach (var item in Model.catgorie)
+    {
+        <div class="col-lg-4 col-md-6 pb-1">
+            <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
 
-    <div class="row px-xl-5 pb-3">
-        <div class="col-lg-4 col-md-4 pb-1">
-            <div class="cat-item d-flex flex-lg-row border mb-4" style="padding: 30px;">
-
-                <a href="" class="cat-img position-relative overflow-hidden mb-3">
+                <a asp-action="products" asp-controller="Categorie" asp-route-id="@item.Id" class="cat-img position-relative overflow-hidden mb-3">
                     <img class="img-fluid" src="~/img/@item.image" alt="">
                 </a>
-                <h5 class="~/font-weight-semi-bold m-0">@item.CategorieName</h5>
+                <h5 class="font-weight-semi-bold mb-0">@item.CategorieName</h5>
             </div>
-
-
         </div>
+    }
+</div>
 
-    </div>
-
-
-
-}
 
 <!-- Categories End -->
 <!-- Subscribe Start -->
