--- a/E-comerceMVC/Views/Products/Delete.cshtml
+++ b/E-comerceMVC/Views/Products/Delete.cshtml
@@ -4,60 +4,40 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<div class="container mt-5">
+    <h1>Delete Product</h1>
+    <hr>
+    <div class="row">
+        <div class="col-md-6">
+            <h4>Product Details</h4>
+            <hr>
+            <dl class="row">
+                <dt class="col-sm-4">Product Name:</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.ProductName)</dd>
+                <dt class="col-sm-4">Price:</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.Price)</dd>
+                <dt class="col-sm-4">Description:</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.Description)</dd>
+                <dt class="col-sm-4">Image URL:</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.imageUrl)</dd>
+                <dt class="col-sm-4">Color:</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.color)</dd>
+                <dt class="col-sm-4">Size:</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.size)</dd>
+                <dt class="col-sm-4">Informations:</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.Informations)</dd>
+            </dl>
+        </div>
+    </div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.imageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.imageUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.color)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.color)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.size)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.size)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Informations)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Informations)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <div class="row mt-5">
+        <div class="col-md-6">
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="Id" />
+                <p>Are you sure you want to delete this product?</p>
+                <button type="submit" class="btn btn-danger">Delete</button>
+                <a asp-action="Index" class="btn btn-secondary ml-2">Back to List</a>
+            </form>
+        </div>
+    </div>
 </div>
