--- a/E-comerceMVC/Views/Products/Index.cshtml
+++ b/E-comerceMVC/Views/Products/Index.cshtml
@@ -9,7 +9,7 @@
 
 
 <p>
-    <a asp-action="Create" class=" btn btn-primary">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -29,46 +29,47 @@
             <th>
                 @Html.DisplayNameFor(model => model.color)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.size)
-            </th>
+           
             <th>
                 @Html.DisplayNameFor(model => model.Informations)
             </th>
-            <th></th>
+            <th>
+                Actions
+            </th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
+                <tr>
+                    <td>
                     @Html.DisplayFor(modelItem => item.ProductName)
-                </td>
-                <td>
+                    </td>
+                    <td>
                     @Html.DisplayFor(modelItem => item.Price)
-                </td>
-                <td>
+                    </td>
+                    <td>
                     @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
+                    </td>
+                    <td>
                     @Html.DisplayFor(modelItem => item.imageUrl)
-                </td>
-                <td>
+                    </td>
+                    <td>
                     @Html.DisplayFor(modelItem => item.color)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.size)
-                </td>
-                <td>
+                    </td>
+                   
+                    <td>
                     @Html.DisplayFor(modelItem => item.Informations)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-edit"> </i> Edit  </a> |
-                    <a asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-eye"> </i>Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"> </i>Delete</a>
-                </td>
-            </tr>
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-edit"></i></a>
+                        <a asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-eye"></i></a>
+                        <a asp-action="Delete" asp-route-id="@item.Id"
+                            onclick="return confirm('Are you sure you want to delete this item?')">
+                            <i class="fas fa-trash"></i>
+                        </a>
+                    </td>
+                </tr>
         }
     </tbody>
 </table>
