--- a/E-comerceMVC/Views/Role/CreateRole.cshtml
+++ b/E-comerceMVC/Views/Role/CreateRole.cshtml
@@ -3,11 +3,11 @@
 @{
     ViewData["title"] = "Create Role";
 }
-<h1>    @ViewData ["title"]</h1>
+<h1>    Create Role as a Manager </h1>
 <div class="row">
     <div class="col-md-4">
         <form method="post">
-            <h4>    Create New Role</h4>
+            
             <br />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -16,6 +16,7 @@
                 <span asp-validation-for="Name" class="text-danger">  </span>
             </div>
             <button type="submit" class="btn btn-primary">  create  </button>
+
 
         </form>
     </div>
