--- a/E-comerceMVC/Views/Shared/_Layout.cshtml
+++ b/E-comerceMVC/Views/Shared/_Layout.cshtml
@@ -38,25 +38,18 @@
         <div class="row border-top px-xl-5">
             <div class="col-lg-3 d-none d-lg-block">
                 <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 65px; margin-top: -1px; padding: 0 30px;">
-                    <h6 class="m-0">Categories</h6>
-                    <i class="fa fa-angle-down text-dark"></i>
+                    <h6 class="m-0">Eshopping</h6>
+                   
                 </a>
-                <nav class="collapse show navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0" id="navbar-vertical">
-                    <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link" data-toggle="dropdown">Dresses <i class="fa fa-angle-down float-right mt-1"></i></a>
-                            <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-
-                                <a href="" class="dropdown-item">Kids Dressings</a>
-                                <a href="" class="dropdown-item">Men's Dressings</a>
-                                <a href="" class="dropdown-item">Women's Dressings</a>
-
-                            </div>
-                        </div>
 
 
-                    </div>
-                </nav>
+                <iframe src="https://webchat.botframework.com/embed/languageServ-bot?s=kua9rJbceiM.7axESLDJ4VIPgie8xQ_Hk-vT5KSAwXAOl5dct0-QgzU"
+                        style="height: 420px; max-height: 420px; width:283px;"></iframe>
+
+
+
+
+
             </div>
             <div class="col-lg-9">
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
@@ -76,6 +69,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Manipulate</a>
 
                             }
+
                             @if (signInManager.IsSignedIn(User) && User.IsInRole("Manager"))
                             {
 
@@ -91,7 +85,7 @@
                                     <a href="checkout.html" class="dropdown-item">Checkout</a>
                                 </div>
                             </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            
                             @if (signInManager.IsSignedIn(User))
                             {
                                 <li class="nav-item">
@@ -119,7 +113,7 @@
                 <div id="header-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" style="height: 410px;">
-                            <img class="img-fluid" src="~/img/carousel-1.jpg" alt="Image">
+                            <img class="img-fluid" src="~/img/tevv.jpg" alt="Image">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
@@ -129,7 +123,7 @@
                             </div>
                         </div>
                         <div class="carousel-item" style="height: 410px;">
-                            <img class="img-fluid" src="~/img/carousel-2.jpg" alt="Image">
+                            <img class="img-fluid" src="~/img/pc.jpg" alt="Image">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
